--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 		"eslint": "^8.30.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-plugin-import": "^2.26.0",
-		"sequelize-cli": "^6.5.2"
+		"sequelize-cli": "^6.5.2",
+		"swagger-jsdoc": "^6.2.7",
+		"swagger-ui-express": "^4.6.0"
 	},
 	"dependencies": {
 		"bcrypt": "^5.1.0",
