--- a/package.json
+++ b/package.json
@@ -1,42 +1,45 @@
 {
-	"devDependencies": {
-		"eslint": "^8.30.0",
-		"eslint-config-airbnb-base": "^15.0.0",
-		"eslint-plugin-import": "^2.26.0",
-		"sequelize-cli": "^6.5.2",
-		"swagger-jsdoc": "^6.2.7",
-		"swagger-ui-express": "^4.6.0"
-	},
-	"dependencies": {
-		"bcrypt": "^5.1.0",
-		"cookie-parser": "^1.4.6",
-		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
-		"joi": "^17.7.0",
-		"jsonwebtoken": "^9.0.0",
-		"morgan": "^1.10.0",
-		"mysql2": "^2.3.3",
-		"nodemon": "^2.0.20",
-		"nunjucks": "^3.2.3",
-		"sequelize": "^6.28.0"
-	},
-	"name": "blog2",
-	"description": "node-blog2",
-	"version": "1.0.0",
-	"main": ".eslintrc.js",
-	"scripts": {
-		"start": "node ./app.js",
-		"dev": "nodemon --watch \"./**/*.js\" --exec \"npm start\"",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/F1rstID/node-blog2.git"
-	},
-	"author": "",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/F1rstID/node-blog2/issues"
-	},
-	"homepage": "https://github.com/F1rstID/node-blog2#readme"
+  "devDependencies": {
+    "eslint": "^8.30.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.26.0",
+    "sequelize-cli": "^6.5.2",
+    "swagger-jsdoc": "^6.2.7",
+    "swagger-ui-express": "^4.6.0"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
+    "nunjucks": "^3.2.3",
+    "prettier": "^2.8.1",
+    "sequelize": "^6.28.0"
+  },
+  "name": "blog2",
+  "description": "node-blog2",
+  "version": "1.0.0",
+  "main": ".eslintrc.js",
+  "scripts": {
+    "start": "node ./app.js",
+    "dev": "nodemon --watch \"./**/*.js\" --exec \"npm start\"",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pre": "prettier --write *.js **/*.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/F1rstID/node-blog2.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/F1rstID/node-blog2/issues"
+  },
+  "homepage": "https://github.com/F1rstID/node-blog2#readme"
 }
